nfs hosted profiles/browsers result in broken search and history because NFS does not follow POSIX filesystem semantics and does not correctly implement posix advisory locking. Add storage.nfs_filesystem preference
Categories
(Core :: SQLite and Embedded Database Bindings, defect, P5)
Tracking
()
People
(Reporter: flin.gs, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
(Whiteboard: [leave open])
Attachments
(2 files)
|
1.96 KB,
patch
|
asuth
:
review+
|
Details | Diff | Splinter Review |
|
2.51 KB,
patch
|
lsblakk
:
approval-mozilla-esr17+
MattN
:
checkin+
|
Details | Diff | Splinter Review |
Comment 3•17 years ago
|
||
Comment 5•17 years ago
|
||
Comment 7•16 years ago
|
||
Comment 9•16 years ago
|
||
Comment 10•16 years ago
|
||
Comment 12•16 years ago
|
||
Comment 13•16 years ago
|
||
Comment 16•16 years ago
|
||
Comment 17•16 years ago
|
||
Comment 18•16 years ago
|
||
Comment 20•16 years ago
|
||
Comment 21•16 years ago
|
||
Comment 23•16 years ago
|
||
Comment 24•16 years ago
|
||
Comment 27•16 years ago
|
||
Comment 28•16 years ago
|
||
Comment 29•16 years ago
|
||
Comment 30•16 years ago
|
||
Comment 31•16 years ago
|
||
Comment 32•16 years ago
|
||
Comment 33•16 years ago
|
||
Comment 34•16 years ago
|
||
Comment 35•16 years ago
|
||
Comment 37•16 years ago
|
||
| Assignee | ||
Comment 38•13 years ago
|
||
| Assignee | ||
Comment 39•13 years ago
|
||
Updated•13 years ago
|
| Assignee | ||
Comment 40•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Comment 41•13 years ago
|
||
| Assignee | ||
Comment 42•13 years ago
|
||
| Assignee | ||
Updated•13 years ago
|
Comment 43•13 years ago
|
||
Comment 44•13 years ago
|
||
Updated•13 years ago
|
Comment 45•13 years ago
|
||
Comment 46•13 years ago
|
||
Comment 47•13 years ago
|
||
| Assignee | ||
Comment 48•13 years ago
|
||
Comment 49•13 years ago
|
||
Updated•13 years ago
|
Comment 50•13 years ago
|
||
Updated•13 years ago
|
Comment 51•13 years ago
|
||
Comment 52•13 years ago
|
||
Updated•13 years ago
|
Comment 55•12 years ago
|
||
Comment 56•12 years ago
|
||
Updated•12 years ago
|
Updated•8 years ago
|
Updated•6 years ago
|
Comment 58•6 years ago
|
||
I still get this error regularly. Websites fail to load (web.whatsapp.com, outlook.office.com, ...) and all report the same error in the console "... NS_ERROR_STORAGE_IOERR ...". Sometimes all I need to do, is restart firefox. Sometimes, I need to close firefox and then manually navigate to the profile directory, do a "mv webappsstore.sqlite{,}" and "mv places.sqlite{,}", followed by "sqlite3 webappsstore.sqlite_" -> ".clone webappsstore.sqlite" and "sqlite3 places.sqlite_" -> ".clone places.sqlite" calls. Afterwards, all sites work again, but on a few I get logged out randomly.
I think it has something to do with the incognito mode. I believe it mostly (or only?) appears when I am using the incognito mode for a long-ish duration - to be able to login to google twice but with different accounts for example. Its quite tedious to restart firefox every few hours just to be able to continue working.
This issues exists for me at least since fall last year, or even longer (I cant remember precisely of when it first appeared).
I am and was running an up to date Linux Mint Desktop (currently 19.3) with the home-directory being mounted on a NFS 4.0+krb5i share, hosted by an up to date debian buster server.
https://glitch.com/~firefox-storage-test
Specific Subsystem Statuses:
LocalStorage
Bad: Our test logic is broken, please copy and paste the contents of 'Debug Info' below and anything in the devtools console and send to :asuth. (unexpectedBreakage)
QuotaManager
Good: Totally Working. (fullyOperational)
IndexedDB
Good: Totally Working. (fullyOperational)
Cache API
Good: Totally Working. (fullyOperational)
{
"v": 1,
"curVersion": 76,
"prevVersion": 0,
"ls": {},
"qm": {
"lastWorkedIn": 76
},
"idb": {
"persistentCreatedIn": 0,
"persistentLastOpenedIn": 76,
"clearDetectedIn": 0
},
"cache": {
"firstCacheCreatedIn": 0,
"unpaddedOpaqueCreatedIn": 0,
"paddedOpaqueCreatedIn": 76
}
}
Comment 59•3 years ago
|
||
In the process of migrating remaining bugs to the new severity system, the severity for this bug cannot be automatically determined. Please retriage this bug using the new severity system.
Comment 60•2 years ago
|
||
The severity field is not set for this bug.
:mak, could you have a look please?
For more information, please visit BugBot documentation.
Updated•2 years ago
|
Updated•1 year ago
|
Description
•