Bug 433129 - Add a storage.nfs_filesystem preference and change the underlying file system to an nfs-friendly one when it's set. r=asuth